WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192694
[PSON] WebsitePolicies are lost on process-swap
https://bugs.webkit.org/show_bug.cgi?id=192694
Summary
[PSON] WebsitePolicies are lost on process-swap
Chris Dumez
Reported
2018-12-13 22:44:34 PST
WebsitePolicies are lost on process-swap.
Attachments
Patch
(24.88 KB, patch)
2018-12-13 22:51 PST
,
Chris Dumez
beidson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-12-13 22:44:51 PST
<
rdar://problem/46715748
>
Chris Dumez
Comment 2
2018-12-13 22:51:40 PST
Created
attachment 357302
[details]
Patch
Brady Eidson
Comment 3
2018-12-14 09:35:32 PST
Comment on
attachment 357302
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=357302&action=review
> Source/WebKit/ChangeLog:11 > + that it is continueing a load and it will therefore not re-trigger a decidePolicyForNavigationAction.
continuing
Chris Dumez
Comment 4
2018-12-14 09:40:59 PST
Committed
r239210
: <
https://trac.webkit.org/changeset/239210
>
Chris Dumez
Comment 5
2018-12-14 12:59:39 PST
Follow-up assertion fix in <
https://trac.webkit.org/changeset/239228
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug